--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -56,6 +56,7 @@
 
     <abp-script-bundle name="@BlazorLeptonXLiteThemeBundles.Scripts.Global" />
     <script src="~/fileDownload.js"></script>
+    <script src="~/printTradeDocument.js"></script>
     <script src="~/order.js"></script>
     <script src="~/redirectConfirmClose.js"></script>
 </body>
