Commit For PK-737

--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -287,6 +287,13 @@
                                             @L["CopyToAll"]
                                         </Span>
                                     </TableHeaderCell>
+                                    <TableHeaderCell Class="text-center">
+                                        @L["Cost"]
+                                        <Span Class="d-block pt-1 text-primary cursor-pointer"
+                                              @onclick="() => CopyToAll(nameof(CreateItemDetailsDto.Cost))">
+                                            @L["CopyToAll"]
+                                        </Span>
+                                    </TableHeaderCell>
                                     <TableHeaderCell Class="text-center">@L["InventoryAccount"]</TableHeaderCell>
                                     <TableHeaderCell Class="text-center">
                                         @L["CurrentStock"]
@@ -345,6 +352,9 @@
                                         </TableRowCell>
                                         <TableRowCell>
                                             <NumericEdit Class="form-control form-control-sm" style="min-width: 100px;" @bind-Value="@item.GroupBuyPrice"></NumericEdit>
+                                        </TableRowCell>
+                                          <TableRowCell>
+                                            <NumericEdit Class="form-control form-control-sm" style="min-width: 100px;" @bind-Value="@item.Cost"></NumericEdit>
                                         </TableRowCell>
                                         <TableRowCell>
                                             <input class="form-control form-control-sm" style="min-width: 100px;" @bind-value="@item.InventoryAccount" />
